# dengue_ml_project

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/01_models/: decision_tree.ipynb  lightgbm.ipynb  logistic_regression.ipynb  random_forest.ipynb  xgboost.ipynb
notebooks/02_evaluation/: bootstrap_ic.ipynb  calibracao.ipynb  comparacao_modelos.ipynb  validacao_2025.ipynb
notebooks/03_interpretation/: feature_importance.ipynb
notebooks/04_fairness/: fairness_estratificada.ipynb
utils/: clean_data.py  download_data.py  treat_data.py
