[project]
name = "dengue-ml-project"
version = "0.1.0"
description = "Pipeline de aprendizado de máquina supervisionado para predição de óbito por dengue a partir de dados do SINAN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.4.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyarrow>=17.0.0",
    "pysus[datasus]==1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
